Revert "edit index"
This reverts commit 2b61c210249dfbc7482b597886e0a8e66af15b2e.

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             <div class="footer-content">
                 <div class="footer-content__navigation">
                     <ul>
-                        <li class="footer-content__navigation__item"><a href="https://www.facebook.com/profile.php?id=100017402853955" target="_blank"></a></li>
-                        <li class="footer-content__navigation__item"><a href="https://www.instagram.com/i.olegspas/" target="_blank"></a></li>
-                        <li class="footer-content__navigation__item"><a href="https://github.com/OlegSpas" target="_blank"></a></li>
+                        <li class="footer-content__navigation__item"><a href="https://www.facebook.com/profile.php?id=100017402853955" target="_blank"><img class="footer-content__navigation__item__img"src="./image/facebook-icon.svg" alt="facebook"></a></li>
+                        <li class="footer-content__navigation__item"><a href="https://www.instagram.com/i.olegspas/" target="_blank"><img class="footer-content__navigation__item__img" src="./image/instagram-icon.svg" alt="instagram"></a></li>
+                        <li class="footer-content__navigation__item"><a href="https://github.com/OlegSpas" target="_blank"><img class="footer-content__navigation__item__img"src="./image/github-icon.svg" alt="github"></a></li>
                     </ul>
                 </div>
             </div>
